# CityOSJarvis

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .tmp-pr-body.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  litellm-config.local.yaml  litellm-mock-proxy.py  pyproject.toml  pytest.ini
.build/codex-tests/: run-pytest-full.ps1
.build/reports/: SECURITY_SCAN_JARVIS_2026-06-05.html  SECURITY_SCAN_JARVIS_2026-06-05.md
.github/: dependabot.yml
.github/clone-stats/: clone-data.json
.github/workflows/: ci.yml  docker-build.yml  python-tests.yml  security-scan.yml  upstream-sync.yml  vps-deploy.yml
apps/cityos-jarvis-desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/cityos-jarvis-desktop/src-tauri/src/: main.rs
apps/mobile/: eas.json
cityos/docs/: index.md
deploy/docker/: .env.example  Dockerfile.cityos  docker-compose.build.yml  docker-compose.cityos.yml  docker-compose.integrated.yml  docker-compose.staging.yml  docker-compose.test.yml  loki-config.yml  promtail-config.yml
docs/: CityOSJarvis.postman_collection.json  MCP_TOOLS_CATALOG.md
docs/javascripts/: leaderboard.js
e2e-reports/ai-stack/: index.html
e2e/ai-stack/: README.md  fallback-resilience.spec.ts  gateway-routing.spec.ts  health-checks.spec.ts  jarvis-chat.spec.ts  playwright.config.ts
frontend/: vite.config.ts
frontend/src/: main.tsx
scripts/: README.md  build-all-clients.sh  build-desktop.ps1  build-desktop.sh
scripts/install/: install.sh
scripts/security/: scan-secrets.sh  scan-vulnerabilities.sh  zap-scan.sh
tests/: conftest.py
(+256 files in other folders)
